--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,3 +8,4 @@ axum = "0.7.7"
 tokio = { version = "1.41.1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+diesel = { version = "2.2.4", features = ["r2d2", "postgres", "chrono",] }
