--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: ./docker/backend/Dockerfile.local
+    container_name: load-test-demo_backend
     volumes:
       - .:/app
     ports:
@@ -12,3 +13,20 @@ services:
     tty: true
     env_file:
       - "./backend/.env"
+    depends_on:
+      - db
+
+  db:
+    image: postgres:17.0-bookworm
+    container_name: load-test-demo_db
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - TZ=Asia/Tokyo
+
+volumes:
+  postgres_data:
