feat: AWS環境用dockerfile修正

--- a/docker/backend/Dockerfile.prod
+++ b/docker/backend/Dockerfile.prod
@@ -4,11 +4,15 @@
 FROM rust:1-slim-bullseye AS builder
 WORKDIR /code
 
-# Download crates-io index and fetch dependency code.
-# This step avoids needing to spend time on every build downloading the index
-# which can take a long time within the docker context. Docker will cache it.
+# install required build dependencies
+RUN apt update && apt install -y libpq-dev
+
+# copy Cargo.toml and Cargo.lock separately to optimize caching
 RUN USER=root cargo init
 COPY backend/Cargo.toml Cargo.toml
+COPY backend/Cargo.lock Cargo.lock
+
+# pre-fetch dependencies
 RUN cargo fetch
 
 # copy app files
@@ -23,6 +27,9 @@ RUN cargo build --release
 FROM debian:bullseye-slim
 WORKDIR /app
 
+# install runtime dependencies
+RUN apt update && apt install -y --no-install-recommends libpq-dev && apt clean && rm -rf /var/lib/apt/lists/*
+
 # copy server binary from build stage
 COPY --from=builder /code/target/release/backend backend
 
@@ -30,7 +37,10 @@ COPY --from=builder /code/target/release/backend backend
 USER 1001
 
 # indicate what port the server is running on
-EXPOSE 8001
+EXPOSE 8011
 
 # run server
 CMD [ "/app/backend" ]
+
+# avoid “exec format error” error in Amazon ECS
+# https://repost.aws/ja/knowledge-center/ecs-task-exec-format-error
